--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>Pratim & Debjani's Wedding Menu</title>
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       font-family: 'Georgia', serif;
       margin: 0;
@@ -27,18 +31,18 @@
     }
 
     header h1 {
-      font-size: 2.5rem;
+      font-size: 2.2rem;
       margin: 0;
     }
 
     header p {
-      font-size: 1.2rem;
+      font-size: 1.1rem;
       margin-top: 0.5rem;
     }
 
     .info {
       margin-top: 1rem;
-      font-size: 1rem;
+      font-size: 0.95rem;
       color: #eee;
     }
 
@@ -46,15 +50,16 @@
       background-color: #fff;
       border-radius: 16px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-      padding: 2rem;
+      padding: 1.5rem;
       max-width: 600px;
-      width: 90%;
-      margin: 2rem auto;
+      width: 95%;
+      margin: 1.5rem auto;
     }
 
     h2 {
       color: #002366;
       text-align: center;
+      font-size: 1.8rem;
     }
 
     .menu-section {
@@ -66,11 +71,13 @@
       border-bottom: 1px solid #ccc;
       padding-bottom: 0.25rem;
       margin-bottom: 0.5rem;
+      font-size: 1.2rem;
     }
 
     ul {
       list-style: none;
       padding: 0;
+      margin: 0;
     }
 
     li {
@@ -84,6 +91,28 @@
       padding: 1rem;
       font-size: 0.9rem;
       color: #fff;
+    }
+
+    @media (max-width: 480px) {
+      header h1 {
+        font-size: 1.8rem;
+      }
+
+      main {
+        padding: 1rem;
+      }
+
+      h2 {
+        font-size: 1.5rem;
+      }
+
+      .menu-section h3 {
+        font-size: 1.1rem;
+      }
+
+      li {
+        font-size: 1rem;
+      }
     }
   </style>
 </head>
