--- a/index.html
+++ b/index.html
@@ -129,32 +129,24 @@
     <h2>Serving Menu</h2>
 
     <div class="menu-section">
-      <h3>Starters</h3>
       <ul>
-        <li>Veg Cutlet</li>
-        <li>Fish Finger</li>
-        <li>Paneer Tikka</li>
+        <li>Chicken Drumstick</li>
+        <li>Salad & Sauce</li>
+        <li>Rumali Roti</li>
+        <li>Keema Chana Masala / Chana Paneer</li>
+        <li>Plain Rice</li>
+        <li>Salad & Sauce</li>
+        <li>Salad & Sauce</li>
+        <li>Salad & Sauce</li>
+        <li>Salad & Sauce</li>
+        <li>Salad & Sauce</li>
+        <li>Salad & Sauce</li>
+        <li>Salad & Sauce</li>
+        
       </ul>
     </div>
 
-    <div class="menu-section">
-      <h3>Main Course</h3>
-      <ul>
-        <li>Fried Rice</li>
-        <li>Butter Chicken</li>
-        <li>Paneer Butter Masala</li>
-        <li>Mixed Veg Curry</li>
-      </ul>
-    </div>
-
-    <div class="menu-section">
-      <h3>Desserts</h3>
-      <ul>
-        <li>Gulab Jamun</li>
-        <li>Ice Cream</li>
-        <li>Rasgulla</li>
-      </ul>
-    </div>
+    
 
     <div class="menu-section">
       <h3>Beverages</h3>
@@ -171,3 +163,4 @@
   </footer>
 </body>
 </html>
+
