--- a/index.html
+++ b/index.html
@@ -135,7 +135,8 @@
         <li>Rumali Roti</li>
         <li>Keema Chana Masala / Chana Paneer</li>
         <li>Plain Rice</li>
-        <li>Salad & Sauce</li>
+        <li>Bhetki Paturi / Chhenar Pāturi / </li>
+        <li>Pulao</li>
         <li>Salad & Sauce</li>
         <li>Salad & Sauce</li>
         <li>Salad & Sauce</li>
@@ -163,4 +164,5 @@
   </footer>
 </body>
 </html>
+
 
