--- a/index.html
+++ b/index.html
@@ -129,7 +129,6 @@
     <h2>Serving Menu</h2>
 
     <div class="menu-section">
-      <h3>Main main course</h3>
       <ul>
         <li>Chicken Drumstick</li>
         <li>Salad & Sauce</li>
@@ -138,7 +137,7 @@
         <li>Plain Rice</li>
         <li>Bhetki Paturi / Chhenar Pāturi / </li>
         <li>Pulao</li>
-        <li>Salad & Sauce</li>
+        <li>Mutton Kosha / Chicken Kosha / Mach / Chhenar Kaliya</li>
         <li>Salad & Sauce</li>
         <li>Salad & Sauce</li>
         <li>Salad & Sauce</li>
@@ -165,6 +164,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
