--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <li>Rumali Roti</li>
         <li>Keema Chana Masala / Chana Paneer</li>
         <li>Plain Rice</li>
-        <li>Bhetki Paturi / Chhenar Pāturi / </li>
+        <li>Bhetki Paturi / Chhenar Pāturi</li>
         <li>Pulao</li>
         <li>Mutton Kosha / Chicken Kosha / Mach / Chhenar Kaliya</li>
         <li>Salad & Sauce</li>
@@ -164,6 +164,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
