--- a/index.html
+++ b/index.html
@@ -138,11 +138,12 @@
         <li>Bhetki Paturi / Chhenar Pāturi</li>
         <li>Pulao</li>
         <li>Mutton Kosha / Chicken Kosha / Mach / Chhenar Kaliya</li>
-        <li>Salad & Sauce</li>
-        <li>Salad & Sauce</li>
-        <li>Salad & Sauce</li>
-        <li>Salad & Sauce</li>
-        <li>Salad & Sauce</li>
+        <li>Chatni</li>
+        <li>Papad</li>
+        <li>somthing</li>
+        <li>Sandesh</li>
+        <li>Paan</li>\
+        <li>Pass Pass</li>
         
       </ul>
     </div>
@@ -164,6 +165,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
