--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <li>Papad</li>
         <li>somthing</li>
         <li>Sandesh</li>
-        <li>Paan</li>\
+        <li>Paan</li>
         <li>Pass Pass</li>
         
       </ul>
@@ -165,6 +165,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
