--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <li>Mutton Kosha / Chicken Kosha / Mach / Chhenar Kaliya</li>
         <li>Chatni</li>
         <li>Papad</li>
-        <li>somthing</li>
+        <li>Cream Chop</li>
         <li>Sandesh</li>
         <li>Paan</li>
         <li>Pass Pass</li>
@@ -166,6 +166,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
