--- a/index.html
+++ b/index.html
@@ -138,10 +138,11 @@
         <li>Bhetki Paturi / Chhenar Pāturi</li>
         <li>Pulao</li>
         <li>Mutton Kosha / Chicken Kosha / Mach / Chhenar Kaliya</li>
-        <li>Chatni</li>
+        <li>Chutney</li>
         <li>Papad</li>
         <li>Cream Chop</li>
         <li>Sandesh</li>
+        <li>Ice Cream (stall)</li>
         <li>Paan</li>
         <li>Pass Pass</li>
         
@@ -152,7 +153,7 @@
     
 
     <div class="menu-section">
-      <h3>Beverages</h3>
+      <h3>Stall</h3>
       <ul>
         <li>Mocktails</li>
         <li>Soft Drinks</li>
@@ -166,6 +167,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
