--- a/index.html
+++ b/index.html
@@ -127,15 +127,15 @@
 
   <main>
     <h2>Serving Menu</h2>
-
     <div class="menu-section">
+      <h3>Main Course</h3>
       <ul>
         <li>Chicken Drumstick</li>
         <li>Salad & Sauce</li>
         <li>Rumali Roti</li>
         <li>Keema Chana Masala / Chana Paneer</li>
         <li>Plain Rice</li>
-        <li>Bhetki Paturi / Chhenar Pāturi</li>
+        <li>Bhetki Paturi / Chhenar Paturi</li>
         <li>Pulao</li>
         <li>Mutton Kosha / Chicken Kosha / Mach / Chhenar Kaliya</li>
         <li>Chutney</li>
@@ -167,6 +167,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
