--- a/index.html
+++ b/index.html
@@ -155,9 +155,13 @@
     <div class="menu-section">
       <h3>Stall</h3>
       <ul>
-        <li>Mocktails</li>
-        <li>Soft Drinks</li>
-        <li>Mineral Water</li>
+        <li>Coffee</li>
+        <li>Chicken Kabab</li>
+        <li>Fish Finger</li>
+        <li>Crispy Baby Corn</li>
+        <li>Mocktail</li>
+        <li>Ice Cream</li>
+        
       </ul>
     </div>
   </main>
@@ -167,6 +171,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
