--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     ul {
       list-style: none;
-      padding-left: 1.2rem; /* added left padding */
+      padding-left: 1.2rem; /* added space from left */
       margin: 0;
     }
 
@@ -87,10 +87,10 @@
     }
 
     li::before {
-      content: "●"; /* added bullet sign */
+      content: "●"; /* bullet */
       position: absolute;
       left: 0;
-      color: #d2691e; /* optional: matches section color */
+      color: #d2691e;
     }
 
     footer {
