--- a/index.html
+++ b/index.html
@@ -76,18 +76,19 @@
 
     ul {
       list-style: none;
-      padding-left: 1.2rem; /* added space from left */
+      padding-left: 0;
       margin: 0;
     }
 
     li {
-      padding: 0.3rem 0;
-      font-size: 1.05rem;
       position: relative;
+      padding-left: 1.5rem; /* space for bullet */
+      margin-bottom: 0.3rem;
+      font-size: 1.05rem;
     }
 
     li::before {
-      content: "●"; /* bullet */
+      content: "●";
       position: absolute;
       left: 0;
       color: #d2691e;
