--- a/index.html
+++ b/index.html
@@ -5,14 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>Pratim & Debjani's Wedding Menu</title>
   <style>
-    * {
-      box-sizing: border-box;
-    }
+    * { box-sizing: border-box; margin: 0; padding: 0; }
 
     body {
       font-family: 'Georgia', serif;
-      margin: 0;
-      padding: 0;
       background: linear-gradient(to bottom, #002366, #ffffff);
       color: #333;
       min-height: 100vh;
@@ -20,6 +16,18 @@
       flex-direction: column;
       align-items: center;
       justify-content: flex-start;
+      overflow-x: hidden;
+      overflow-y: auto;
+    }
+
+    canvas { 
+      position: fixed; 
+      top: 0; 
+      left: 0; 
+      width: 100%; 
+      height: 100%; 
+      pointer-events: none; 
+      z-index: 1;
     }
 
     header {
@@ -28,23 +36,13 @@
       width: 100%;
       text-align: center;
       padding: 2rem 1rem;
+      position: relative;
+      z-index: 2;
     }
 
-    header h1 {
-      font-size: 2.2rem;
-      margin: 0;
-    }
-
-    header p {
-      font-size: 1.1rem;
-      margin-top: 0.5rem;
-    }
-
-    .info {
-      margin-top: 1rem;
-      font-size: 0.95rem;
-      color: #eee;
-    }
+    header h1 { font-size: 2.2rem; margin: 0; }
+    header p { font-size: 1.1rem; margin-top: 0.5rem; }
+    .info { margin-top: 1rem; font-size: 0.95rem; color: #eee; }
 
     main {
       background-color: #fff;
@@ -54,18 +52,13 @@
       max-width: 600px;
       width: 95%;
       margin: 1.5rem auto;
+      position: relative;
+      z-index: 2;
     }
 
-    h2 {
-      color: #002366;
-      text-align: center;
-      font-size: 1.8rem;
-    }
+    h2 { color: #002366; text-align: center; font-size: 1.8rem; }
 
-    .menu-section {
-      margin-bottom: 1.5rem;
-    }
-
+    .menu-section { margin-bottom: 1.5rem; }
     .menu-section h3 {
       color: #d2691e;
       border-bottom: 1px solid #ccc;
@@ -74,19 +67,13 @@
       font-size: 1.2rem;
     }
 
-    ul {
-      list-style: none;
-      padding-left: 0;
-      margin: 0;
-    }
-
+    ul { list-style: none; padding-left: 0; margin: 0; }
     li {
       position: relative;
-      padding-left: 1.5rem; /* space for bullet */
+      padding-left: 1.5rem;
       margin-bottom: 0.3rem;
       font-size: 1.05rem;
     }
-
     li::before {
       content: "●";
       position: absolute;
@@ -100,32 +87,22 @@
       padding: 1rem;
       font-size: 0.9rem;
       color: #fff;
+      position: relative;
+      z-index: 2;
     }
 
     @media (max-width: 480px) {
-      header h1 {
-        font-size: 1.8rem;
-      }
-
-      main {
-        padding: 1rem;
-      }
-
-      h2 {
-        font-size: 1.5rem;
-      }
-
-      .menu-section h3 {
-        font-size: 1.1rem;
-      }
-
-      li {
-        font-size: 1rem;
-      }
+      header h1 { font-size: 1.8rem; }
+      main { padding: 1rem; }
+      h2 { font-size: 1.5rem; }
+      .menu-section h3 { font-size: 1.1rem; }
+      li { font-size: 1rem; }
     }
   </style>
 </head>
 <body>
+  <canvas id="fireworks"></canvas>
+
   <header>
     <h1>Pratim & Debjani</h1>
     <p>Thank you for being part of our Special day</p>
@@ -173,5 +150,105 @@
   <footer>
     &copy; 2025 Pratim & Debjani. All rights reserved.
   </footer>
+
+  <script>
+    const canvas = document.getElementById('fireworks');
+    const ctx = canvas.getContext('2d');
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
+
+    let fireworks = [];
+    let particles = [];
+
+    function random(min,max){ return Math.random()*(max-min)+min; }
+
+    class Firework {
+      constructor(x, y, targetY){
+        this.x = x;
+        this.y = y;
+        this.targetY = targetY;
+        this.speed = random(2,4);
+        this.particles = [];
+        this.exploded = false;
+      }
+      update(){
+        if(this.y > this.targetY){
+          this.y -= this.speed;
+        } else if(!this.exploded){
+          this.explode();
+          this.exploded = true;
+        }
+      }
+      explode(){
+        for(let i=0;i<30;i++){
+          particles.push(new Particle(this.x,this.y));
+        }
+      }
+      draw(){
+        if(!this.exploded){
+          ctx.beginPath();
+          ctx.arc(this.x,this.y,2,'0','2*Math.PI');
+          ctx.fillStyle = 'white';
+          ctx.fill();
+        }
+      }
+    }
+
+    class Particle {
+      constructor(x,y){
+        this.x = x;
+        this.y = y;
+        this.speed = random(1,5);
+        this.angle = random(0, Math.PI*2);
+        this.gravity = 0.05;
+        this.alpha = 1;
+        this.color = `hsl(${random(0,360)},100%,50%)`;
+      }
+      update(){
+        this.speed *= 0.98;
+        this.x += Math.cos(this.angle)*this.speed;
+        this.y += Math.sin(this.angle)*this.speed + this.gravity;
+        this.alpha -= 0.02;
+      }
+      draw(){
+        ctx.globalAlpha = this.alpha;
+        ctx.beginPath();
+        ctx.arc(this.x,this.y,2,0,Math.PI*2);
+        ctx.fillStyle = this.color;
+        ctx.fill();
+        ctx.globalAlpha = 1;
+      }
+    }
+
+    function animate(){
+      ctx.fillStyle = 'rgba(0,0,0,0.1)';
+      ctx.fillRect(0,0,canvas.width,canvas.height);
+
+      if(Math.random()<0.03){
+        fireworks.push(new Firework(random(50,canvas.width-50),canvas.height,random(100,canvas.height/2)));
+      }
+
+      fireworks.forEach((f,index)=>{
+        f.update();
+        f.draw();
+        if(f.exploded) fireworks.splice(index,1);
+      });
+
+      particles.forEach((p,index)=>{
+        p.update();
+        p.draw();
+        if(p.alpha <= 0) particles.splice(index,1);
+      });
+
+      requestAnimationFrame(animate);
+    }
+
+    animate();
+
+    window.addEventListener('resize', ()=>{
+      canvas.width = window.innerWidth;
+      canvas.height = window.innerHeight;
+    });
+  </script>
 </body>
 </html>
