--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ footer {
       <li>Plain Rice</li>
       <li>Bhetki Paturi / Chhenar Paturi</li>
       <li>Pulao</li>
-      <li>Mutton Kosha / Chicken Kosha / Mach / Chhenar Kaliya</li>
+      <li>Mutton Kosha / Chicken Kosha / Fish Curry / Chhenar Kaliya</li>
       <li>Chutney</li>
       <li>Papad</li>
       <li>Cream Chop</li>
@@ -142,7 +142,7 @@ footer {
     <h3>Stall</h3>
     <ul>
       <li>Coffee</li>
-      <li>Chicken Kabab</li>
+      <li>Chicken Kebab</li>
       <li>Fish Finger</li>
       <li>Crispy Baby Corn</li>
       <li>Mocktail</li>
@@ -266,3 +266,4 @@ window.addEventListener('resize', ()=>{
 </script>
 </body>
 </html>
+
