--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ footer {
   <h1 id="title">Pratim & Debjani</h1>
   <p>Thank you for being part of our Special day</p>
   <div class="info">
-    <p>5th December | Alonkar Lodge, Kamarpara, Chinsurah</p>
+    <p>5th December | Alankar Lodge, Kamarpara, Chinsurah</p>
   </div>
 </header>
 
@@ -266,4 +266,5 @@ window.addEventListener('resize', ()=>{
 </script>
 </body>
 </html>
+
 
