--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ footer {
   <h1 id="title">Pratim & Debjani</h1>
   <p>Thank you for being part of our Special day</p>
   <div class="info">
-    <p>5th December | Alankar Lodge, Kamarpara, Chinsurah</p>
+    <p>Every dish on this menu was chosen with love. So please enjoy the food—it was the most expensive part of the wedding. Eat slowly and savor our debt!</p>
   </div>
 </header>
 
@@ -266,5 +266,6 @@ window.addEventListener('resize', ()=>{
 </script>
 </body>
 </html>
+
 
 
